fix dark mode for footer

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -107,7 +107,7 @@
     margin-bottom: $spacing-unit / 2;
     
     a {
-        color: #111;
+        color: $grey-color;
     }
 }
 
